# lowpoly3d

./: .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  README.md  appveyor.yml  build.hpp.in  gamedata.json  lowpoly3d.code-workspace  startup-linux.sh  startup-windows.bat
.github/workflows/: build.yml
cmake/: buildcache.cmake  target_disable_warnings.cmake
example/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  empty
example/src/: example.cpp
include/: args.hxx  bezier.hpp  binary_path.hpp  bounding_volume_hierarchy.hpp  camera.hpp  celestialbody.hpp  circlegenerator.hpp  command.hpp  cubegenerator.hpp  cylindergenerator.hpp  debugrenderer.hpp  deltatime.hpp  depthframebuffer.hpp  draw_geometric_primitives.hpp  drawfeature.hpp  dummysimulation.hpp  events.hpp  fps_camera.hpp  framebuffer.hpp  gamedata.hpp  glframe.hpp  glfw_callbacks.hpp  ilowpolyinput.hpp  keyaction.hpp  keymanager.hpp  lowpoly3d.hpp  minimum_bounding_sphere.hpp  misc.hpp  model.hpp  modeldefs.hpp  modelgenerator.hpp  modeluniformdata.hpp  mvpuniformdata.hpp  perlin.hpp  phase.hpp  phasemanager.hpp  planegenerator.hpp  renderdata.hpp  renderer.hpp  renderquerier.hpp  (+9 more)
include/generators/: conegenerator.hpp  cylindergenerator.hpp  planegenerator.hpp  spheregenerator.hpp  terraingenerator.hpp  treegenerator.hpp
include/geometric_primitives/: arrow.hpp  cone.hpp  cylinder.hpp  direction.hpp  intersections.hpp  intersects.hpp  line.hpp  linesegment.hpp  oriented_plane.hpp  parallelogram.hpp  plane.hpp  point.hpp  rectangle.hpp  sphere.hpp  triangle.hpp
include/utils/: almost_eq.hpp  apt_assert.hpp  arithmetic_invariant.hpp  glmutils.hpp  lerp.hpp  misc.hpp  no_such_triangle_exception.hpp  not_implemented_exception.hpp  solve.hpp  strong_type.hpp  throw_if.hpp
include/utils/glm/: are_parallel.hpp  glmprint.hpp  glmutils.hpp  vector_projection.hpp
intersection_visualizations/: CMakeLists.txt
intersection_visualizations/src/: intersection_visualizations.cpp
shaders/: color.frag  debug.frag  debug.vert  depth.frag  depth.vert  normal.frag  passthrough.frag  passthrough.vert  postprocess.frag  shader.frag  shader.geom  shader.vert  shadowmap.frag  shadowmap.vert  simple.frag  simple.vert  skybox.frag  skybox.vert  sun.frag  sun.vert  water.frag  water.vert
src/: binary_path.cpp  bounding_volume_hierarchy.cpp  camera.cpp  circlegenerator.cpp  cubegenerator.cpp  cylindergenerator.cpp  debugrenderer.cpp  deltatime.cpp  depthframebuffer.cpp  draw_geometric_primitives.cpp  drawfeature.cpp  dummysimulation.cpp  example.cpp  fps_camera.cpp  framebuffer.cpp  glframe.cpp  glfw_callbacks.cpp  intersection_visualizations.cpp  keyaction.cpp  keymanager.cpp  main.cpp  minimum_bounding_sphere.cpp  model.cpp  perlin.cpp  planegenerator.cpp  renderdata.cpp  renderer.cpp  scene.cpp  shaderprogram.cpp  shaderprogrambank.cpp  spheregenerator.cpp  terraingenerator.cpp  uniformbuffer.cpp
src/generators/: circlegenerator.cpp  conegenerator.cpp  cubegenerator.cpp  cylindergenerator.cpp  planegenerator.cpp  spheregenerator.cpp  terraingenerator.cpp
src/geometric_primitives/: intersections.cpp  intersects.cpp  sphere.cpp  triangle.cpp
src/utils/: no_such_triangle_exception.cpp  not_implemented_exception.cpp  throw_if.cpp
tests/: CMakeLists.txt  arithmetic_invariant_test.cpp  bounding_volume_hierarchy_test.cpp  intersections_test.cpp  lerp_test.cpp  plane_test.cpp  solve_test.cpp  sphere_test.cpp  triangle_test.cpp
